--- a/Actividad 3 JS Diego/css/main.css
+++ b/Actividad 3 JS Diego/css/main.css
@@ -95,7 +95,7 @@ input:checked+.slider:before {
     width: 13px;
     height: 13px;
     border-radius: 50%;
-    background: red;
+    background: #302AE6;
     animation-timing-function: cubic-bezier(0, 1, 1, 0);
   }
   .lds-ellipsis div:nth-child(1) {
