--- a/pokedex-react/src/index.css
+++ b/pokedex-react/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*
+{
+    margin: 0px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav {
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.searchbar {
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25) !important;
+    border-radius: 3px;
+    border: none;
+}
+
+.searchbar:focus{
+    outline: none;
+}
+
+.searchbar-btn {
+    background-color: #363636 !important;
+    border: #363636 !important;
+    border-radius: 10px;
+    padding: 10px 12px;
+}
+
+.searchbar-btn:hover
+{
+    background-color: #414141 !important;
 }
